# hr-skillset-evaluator-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.archgate/: archgate.config.ts
.archgate/adr/: 001-no-raw-sql.md  002-api-json-only.md  003-component-naming.md  004-no-secrets.md  005-typed-api.md
.claude/: launch.json  start-server.sh
.github/workflows/: ci.yml  security.yml
backend/: coveralls.json  mix.exs
backend/config/: config.exs  dev.exs  prod.exs  test.exs  (+1 more)
data/: glossary_aec_construction.md
docs/: HANDOUT.md  index.md  package-lock.json  package.json
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
llm/: AGENTS.md
spec/: 01_ARCHITECTURE.md  02_DATA_MODEL.md  03_AUTH_AND_ROLES.md  04_API.md  05_FRONTEND.md  06_VISUALIZATION.md  07_XLSX_IMPORT_EXPORT.md  08_TESTING.md  09_PIPELINES.md  10_TROUBLESHOOTING.md  11_LEARNINGS.md  12_DEPLOYMENT.md  13_DESIGN_SYSTEM.md  15_AI_CHAT_AGENT.md
specs/: 01_ARCHITECTURE.md  05_FRONTEND.md  06_VISUALIZATION.md  08_TESTING.md  09_PIPELINES.md  10_TROUBLESHOOTING.md  11_LEARNINGS.md  12_DEPLOYMENT.md  14_ONBOARDING.md
tools/pipeline_runner/: Dockerfile  pyproject.toml
tools/pipeline_runner/pipeline_runner/: __init__.py  __main__.py  config.py  runner.py
tools/pipeline_runner/pipeline_runner/stages/: __init__.py  archgate.py  build.py  lint.py  security.py  test.py  typecheck.py
tools/pipeline_runner/tests/: test_runner.py
(+233 files in other folders)
